--- a/trunk/glvnsjc/pom.xml
+++ b/trunk/glvnsjc/pom.xml
@@ -77,7 +77,6 @@
       <artifactId>aspectjweaver</artifactId>
     </dependency>
 
-
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-core-tiger</artifactId>
@@ -90,8 +89,61 @@
           <groupId>org.springframework</groupId>
           <artifactId>spring-support</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-aop</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-beans</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-context</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
+    
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-taglibs</artifactId>
+      <version>${spring.security.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-dao</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-jdbc</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-web</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-core</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-support</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-aop</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-beans</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-context</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    
 
     <!-- ================================================================== -->
     <!--  Conversation                                                      -->
@@ -138,14 +190,14 @@
       <groupId>javax.servlet</groupId>
       <artifactId>jstl</artifactId>
     </dependency>
-    
-      <dependency>
-        <groupId>net.sourceforge.jsf-comp</groupId>
-        <artifactId>acegi-jsf</artifactId>
-        <version>${acegi.jsf.version}</version>
-        <scope>runtime</scope>
-      </dependency>
-    
+
+    <dependency>
+      <groupId>net.sourceforge.jsf-comp</groupId>
+      <artifactId>acegi-jsf</artifactId>
+      <version>${acegi.jsf.version}</version>
+      <scope>runtime</scope>
+    </dependency>
+
 
     <!-- ================================================================== -->
     <!--  logger                                                            -->
