--- a/glvnsjc/webapp/WEB-INF/web.xml
+++ b/glvnsjc/webapp/WEB-INF/web.xml
@@ -104,6 +104,11 @@
   </context-param>
 
   <context-param>
+    <param-name>facelets.DEVELOPMENT</param-name>
+    <param-value>true</param-value>
+  </context-param>
+
+  <context-param>
     <param-name>facelets.LIBRARIES</param-name>
     <param-value>
       /WEB-INF/taglibs/acegijsf.taglib.xml; /WEB-INF/taglibs/corejsf-validator.taglib.xml;
@@ -114,6 +119,14 @@
   <!-- =========================================================================== 
     Filter settings                             
     =========================================================================== -->
+  <filter>
+    <filter-name>securityFilter</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    <init-param>
+      <param-name>targetBeanName</param-name>
+      <param-value>springSecurityFilterChain</param-value>
+    </init-param>
+  </filter>
 
   <filter>
     <filter-name>trinidad</filter-name>
@@ -132,7 +145,7 @@
       <param-value>true</param-value>
     </init-param>
   </filter>
-  
+
   <filter-mapping>
     <filter-name>trinidad</filter-name>
     <servlet-name>Faces Servlet</servlet-name>
@@ -151,10 +164,23 @@
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>
-      classpath:org/glvnsjc/applicationContext-persistence.xml, classpath:org/glvnsjc/applicationContext-datasource.xml,
-      classpath:org/glvnsjc/applicationContext-resources.xml, classpath:org/glvnsjc/applicationContext-jpa.xml,
-      classpath:org/glvnsjc/applicationContext-orchestra.xml, classpath:org/glvnsjc/applicationContext-dao.xml,
+
+      classpath:org/glvnsjc/applicationContext-persistence.xml,
+
+      classpath:org/glvnsjc/applicationContext-datasource.xml,
+
+      classpath:org/glvnsjc/applicationContext-resources.xml,
+
+      classpath:org/glvnsjc/applicationContext-jpa.xml,
+
+      classpath:org/glvnsjc/applicationContext-orchestra.xml,
+
+      classpath:org/glvnsjc/applicationContext-dao.xml,
+
+      classpath:org/glvnsjc/applicationContext-security.xml,
+
       classpath:org/glvnsjc/applicationContext-glvnsjc-web.xml,
+
     </param-value>
   </context-param>
 
