--- a/glvnsjc/pom.xml
+++ b/glvnsjc/pom.xml
@@ -103,7 +103,7 @@
         </exclusion>
       </exclusions>
     </dependency>
-    
+
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-taglibs</artifactId>
@@ -143,7 +143,7 @@
         </exclusion>
       </exclusions>
     </dependency>
-    
+
 
     <!-- ================================================================== -->
     <!--  Conversation                                                      -->
@@ -167,6 +167,12 @@
     <dependency>
       <groupId>com.sun.facelets</groupId>
       <artifactId>jsf-facelets</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-dao</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
@@ -196,6 +202,13 @@
       <artifactId>acegi-jsf</artifactId>
       <version>${acegi.jsf.version}</version>
       <scope>runtime</scope>
+      <exclusions>
+        <exclusion>
+          <artifactId>acegi-security</artifactId>
+          <groupId>org.acegisecurity</groupId>
+        </exclusion>
+      </exclusions>
+
     </dependency>
 
 
@@ -205,6 +218,7 @@
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
+      <version>${log4j.version}</version>
       <scope>runtime</scope>
     </dependency>
 
@@ -216,11 +230,13 @@
     <dependency>
       <groupId>javax.mail</groupId>
       <artifactId>mail</artifactId>
+      <version>${javamail.version}</version>
     </dependency>
 
     <dependency>
       <groupId>velocity</groupId>
       <artifactId>velocity</artifactId>
+      <version>${velocity.version}</version>
     </dependency>
 
 
