--- a/pom.xml
+++ b/pom.xml
@@ -602,6 +602,12 @@
     <jsfmyfaces.version>1.2.1</jsfmyfaces.version>
     
     <spring.security.version>2.0.1</spring.security.version>
+    
+    <log4j.version>1.2.8</log4j.version>
+    <velocity.version>1.4</velocity.version>
+    <tomahawk.version>1.1.6</tomahawk.version>
+    <javamail.version>1.4</javamail.version>
+    <acegi.jsf.version>1.1.3</acegi.jsf.version>
 
   </properties>
 
