--- a/trunk/glvnsjc/webapp/WEB-INF/web.xml
+++ b/trunk/glvnsjc/webapp/WEB-INF/web.xml
@@ -111,7 +111,10 @@
   <context-param>
     <param-name>facelets.LIBRARIES</param-name>
     <param-value>
-      /WEB-INF/taglibs/acegijsf.taglib.xml; /WEB-INF/taglibs/corejsf-validator.taglib.xml;
+      /WEB-INF/taglibs/acegijsf.taglib.xml;
+
+      /WEB-INF/taglibs/corejsf-validator.taglib.xml;
+
       /WEB-INF/taglibs/tomahawk.taglib.xml
     </param-value>
   </context-param>
