--- a/trunk/glvnsjc/pom.xml
+++ b/trunk/glvnsjc/pom.xml
@@ -188,6 +188,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.apache.myfaces.tomahawk</groupId>
+      <artifactId>tomahawk</artifactId>
+      <version>${tomahawk.version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.myfaces.trinidad</groupId>
       <artifactId>trinidad-impl</artifactId>
     </dependency>
