--- a/glvnsjc/pom.xml
+++ b/glvnsjc/pom.xml
@@ -199,6 +199,13 @@
     </dependency>
 
     <dependency>
+      <groupId>taglibs</groupId>
+      <artifactId>standard</artifactId>
+      <version>${jstl.standard.version}</version>
+      <scope>runtime</scope>
+    </dependency>
+
+    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>jstl</artifactId>
     </dependency>
